--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,9 @@
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
+    <string name="guarda">Guarda</string>
+    <string name="carlos_cruz">Carlos Cruz</string>
+    <string name="masculino">Masculino</string>
+    <string name="_25_10_1990">25/10/1990</string>
+    <string name="_990205170">990205170</string>
 </resources>
