--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,8 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
+    <string name="menu_pessoa">Pessoas</string>
+    <string name="menu_nova_pessoa">Nova Pessoa</string>
     <string name="menu_slideshow">Slideshow</string>
     <string name="guarda">Guarda</string>
     <string name="carlos_cruz">Carlos Cruz</string>
