Criado menu para adicionar pessoa

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
     <string name="data_de_nascimento">Data de Nascimento</string>
     <string name="telemovel">Telemovel</string>
     <string name="distrito">Distrito</string>
+    <string name="guardar">Guardar</string>
+    <string name="cancelar">Cancelar</string>
 </resources>
