Processar as opções do menu no fragmento associado ao menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="distrito">Distrito</string>
     <string name="guardar">Guardar</string>
     <string name="cancelar">Cancelar</string>
+    <string name="versao">Pessoa v. 1.0</string>
 </resources>
