--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
 
     <string name="menu_pessoa">Pessoas</string>
     <string name="menu_nova_pessoa">Nova Pessoa</string>
+    <string name="menu_edita_pessoa">Editar Pessoa</string>
     <string name="menu_slideshow">Slideshow</string>
     <string name="guarda">Guarda</string>
     <string name="carlos_cruz">Carlos Cruz</string>
@@ -31,4 +32,6 @@
     <string name="preencha_data_nascimento">Preencha data de nascimento</string>
     <string name="preencha_contacto_telemovel">Coloque o seu numero de telemovel</string>
     <string name="erro_ao_inserir_pessoa">Erro ao inserir pessoa</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
