--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,5 +38,6 @@
     <string name="elimina_pessoa_fragment_label">Eliminar Pessoa?</string>
     <string name="erro_eliminar_pessoa">Erro ao eliminar pessoa</string>
     <string name="pessoa_eliminada_com_sucesso">Pessoa eliminada com sucesso</string>
+    <string name="nav_distrito_menu">Distrito</string>
 
 </resources>
