--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,9 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="erro_inserir_distrito">Erro ao inserir distrito</string>
+    <string name="nome_lista_distrito">Distritos</string>
+    <string name="nome_lista_testes">Testes</string>
+    <string name="titulo_testes">Teste</string>
 
 
 </resources>
