--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,12 +44,14 @@
     <string name="eliminar_distrito">Eliminar Distrito</string>
     <string name="alterar_distrito">Alterar Distrito</string>
     <string name="novo_distrito">Novo Distrito</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+
     <string name="erro_inserir_distrito">Erro ao inserir distrito</string>
     <string name="nome_lista_distrito">Distritos</string>
     <string name="nome_lista_testes">Testes</string>
     <string name="titulo_testes">Teste</string>
+    <string name="projeto_final">Projeto Final</string>
+    <string name="covid_19">Covid19</string>
 
 
 </resources>
