Fragment novo distrito concluido

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -40,4 +40,5 @@
     <string name="nome_lista_testes">Essais</string>
     <string name="titulo_testes">Test</string>
     <string name="projeto_final">Projet final</string>
+    <string name="titulo_novo_distrito">Nom du district</string>
 </resources>
