--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -40,4 +40,5 @@
     <string name="nav_header_desc">Cabeçalho de navegação</string>
     <string name="navigation_drawer_open">Abra a gaveta de navegação</string>
     <string name="action_settings">Definições</string>
+    <string name="titulo_novo_distrito">Novo Distrito</string>
 </resources>
