--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,6 +75,8 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="titulo_edita_teste">Editar Teste</string>
+    <string name="erro_alterar_teste">Erro ao alterar teste</string>
+    <string name="teste_alterado_sucesso">Teste alterado com sucesso</string>
 
 
 </resources>
