--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,6 +78,9 @@
     <string name="teste_alterado_sucesso">Test successfully changed</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="titulo_elimina_teste">Eliminar Teste?</string>
+    <string name="erro_eliminar_teste">Erro ao eliminar teste</string>
+    <string name="teste_eliminado_sucesso">Teste eliminado com sucesso</string>
 
 
 </resources>
