--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,7 +81,12 @@
     <string name="erro_eliminar_teste">Erro ao eliminar teste</string>
     <string name="teste_eliminado_sucesso">Teste eliminado com sucesso</string>
     <string name="alerta">Alerta</string>
-    <string name="titulo_lista_alerta" >Alertas</string>
+    <string name="titulo_lista_alerta">Alertas</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="titutlo_novo_alerta">Novo Alerta</string>
+    <string name="nome_do_alerta">Nome do Alerta</string>
+    <string name="descri_o">Descrição</string>
 
 
 </resources>
