--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,11 +82,13 @@
     <string name="teste_eliminado_sucesso">Teste eliminado com sucesso</string>
     <string name="alerta">Alerta</string>
     <string name="titulo_lista_alerta">Alertas</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
     <string name="titutlo_novo_alerta">Novo Alerta</string>
     <string name="nome_do_alerta">Nome do Alerta</string>
     <string name="descri_o">Descrição</string>
+    <string name="preencha_campo_alerta">Preencha campo alerta</string>
+    <string name="erro_inserir_alerta">Erro ao inserir alerta</string>
+    <string name="preencha_campo_descricao">Preencha o campo descrição</string>
 
 
 </resources>
