--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,6 +92,11 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="titulo_edita_alerta">Editar Alerta</string>
+    <string name="erro_alterar_alerta">Erro ao alterar alerta</string>
+    <string name="alerta_alterado_sucesso">Alerta alterado com sucesso</string>
+    <string name="eliminar_alerta">Eliminar Alerta</string>
+    <string name="alterar_alerta">Alterar Alerta</string>
+    <string name="novo_alerta">Novo Alerta</string>
 
 
 </resources>
