EliminaAlertaFragment concluido com exito(menu elimina alerta)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -99,6 +99,7 @@
     <string name="novo_alerta">Novo Alerta</string>
     <string name="erro_eliminar_alerta">Erro ao eliminar alerta</string>
     <string name="alerta_eliminado_sucesso">Alerta Eliminado com sucesso</string>
+    <string name="titulo_elimina_alerta">Eliminar Alerta</string>
 
 
 </resources>
