--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,6 +100,8 @@
     <string name="erro_eliminar_alerta">Erro ao eliminar alerta</string>
     <string name="alerta_eliminado_sucesso">Alerta Eliminado com sucesso</string>
     <string name="titulo_elimina_alerta">Eliminar Alerta</string>
+    <string name="negativo">Negativo</string>
+    <string name="verde">Verde</string>
 
 
 </resources>
