Concluido a ListaNotificacaoFragment(menu lista notificação)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,6 +103,7 @@
     <string name="negativo">Negativo</string>
     <string name="verde">Verde</string>
     <string name="titulo_lista_notificacao">Notificação</string>
+    <string name="notifica_o">Notificação</string>
 
 
 </resources>
