Criado layout do fragment_elimina_notificacao

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -111,6 +111,7 @@
     <string name="preencha_campo_resultado">Preencha o campo resultado</string>
     <string name="erro_alterar_notificacao">Erro ao alterar a notificação</string>
     <string name="notificacao_alterada_sucesso">Notificação alterada com sucesso</string>
+    <string name="titulo_eliminar_notificacao">Eliminar Notificação</string>
 
 
 </resources>
